--- a/CursoCss/projeto_Tecblog/index.html
+++ b/CursoCss/projeto_Tecblog/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="css/estilo.css">
 </head>
 <body>
+    
     <div id="area-cabecalho">
 
         <div id="area-logo">
@@ -19,6 +20,11 @@
             <a href="informatica.html">Informatica</a>
             <a href="eletronicos.html">Eletrônicos</a>
         </div>
+
+    </div>
+
+    <div>
+
 
     </div>
 
