--- a/CursoCss/projeto_Tecblog/index.html
+++ b/CursoCss/projeto_Tecblog/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tecblog - O seu blog de tecnologia</title>
     <link rel="stylesheet" type="text/css" href="css/estilo.css">
 </head>
+
 <body>
-    
+    <!--abertura do cabeçalho-->
     <div id="area-cabecalho">
 
         <div id="area-logo">
@@ -20,15 +22,56 @@
             <a href="informatica.html">Informatica</a>
             <a href="eletronicos.html">Eletrônicos</a>
         </div>
-
+        <!-- //Fechamento do cabeçalho-->
     </div>
+    
+    <div id="area-principal">
+        <!--abertura da area de postagem-->
+        <div id="area-postagens">
+            <div class="postagem">
+                <h2>Titulo da postagem 1</h2>
+                <span class="data-postagem">Postado de 20 março 2022</span>
+                <img width="620px" src="imagens/imagem1.jpg">
+                <p>
+                    O Lorem Ipsum é um texto modelo da indústria tipográfica e de impressão. O Lorem Ipsum tem vindo a
+                    ser o texto padrão usado por estas indústrias desde o ano de 1500, quando uma misturou os caracteres
+                    de um texto para criar um espécime de livro...
+                </p>
+                <a href="">leia mais</a>
+            </div> <!-- //Fechamento postagem-->
 
-    <div>
+            <!--abertura da area de postagem-->
+        <div id="area-postagens">
+            <div class="postagem">
+                <h2>Titulo da postagem 2</h2>
+                <span class="data-postagem">Postado de 10 março 2022</span>
+                <img width="620px" src="imagens/imagem2.jpg">
+                <p>
+                    O Lorem Ipsum é um texto modelo da indústria tipográfica e de impressão. O Lorem Ipsum tem vindo a
+                    ser o texto padrão usado por estas indústrias desde o ano de 1500, quando uma misturou os caracteres
+                    de um texto para criar um espécime de livro...
+                </p>
+                <a href="">leia mais</a>
+            </div> <!-- //Fechamento postagem-->
+        </div>
+        <div id="area-lateral">
 
+           <div class="conteudo-lateral">
+                <h3>Postagens recentes</h3>
+                <div class="postagem-lateral">
+                   <p> O Lorem Ipsum é um texto modelo da indústria tipográfica. </p>
+                   <a href="">leia mais</a>
+                </div>
+           </div>
+        </div>
 
+        <div id="rodape">
+            Todos os direitos reservados
+        </div>
     </div>
 
 
 
 </body>
+
 </html>
