--- a/CursoCss/projeto_Tecblog/index.html
+++ b/CursoCss/projeto_Tecblog/index.html
@@ -62,7 +62,25 @@
                    <p> O Lorem Ipsum é um texto modelo da indústria tipográfica. </p>
                    <a href="">leia mais</a>
                 </div>
+
+                <hr>
+
+                <div class="postagem-lateral" style="border-bottom: none;">
+                    <p> O Lorem Ipsum é um texto modelo da indústria tipográfica. </p>
+                    <a href="">leia mais</a>
+                 </div>
            </div>
+           <div class="conteudo-lateral">
+            <h3>Categorias</h3>
+
+            <a href="">Jogos</a><br>
+            <a href="">Celulares</a><br>
+            <a href="">Informática</a><br>
+            <a href="">Eletrônicos</a><br>
+            
+            
+       </div>
+
         </div>
 
         <div id="rodape">
