--- a/CursoCss Intermediario e avançado/Barra de navegação/noticias.html
+++ b/CursoCss Intermediario e avançado/Barra de navegação/noticias.html
@@ -6,8 +6,8 @@
     <title>Document</title>
     <link rel="stylesheet" type="text/css" href="estilo.css">
 </head>
-<body id="servicos">
-    <h2>Serviços</h2>
+<body id="home">
+    <h2>Home</h2>
     <ul id="navegacao">
         <li class="home">
              <a href="index.html">Home</a> 
