--- a/CursoCss Intermediario e avançado/Barra de navegação/contato.html
+++ b/CursoCss Intermediario e avançado/Barra de navegação/contato.html
@@ -6,8 +6,8 @@
     <title>Document</title>
     <link rel="stylesheet" type="text/css" href="estilo.css">
 </head>
-<body id="noticias">
-    <h2>Notícias</h2>
+<body id="contato">
+    <h2>Contato</h2>
     <ul id="navegacao">
         <li class="home">
              <a href="index.html">Home</a> 
