--- a/CursoCss Intermediario e avançado/Barra de navegação horizontal/index.html
+++ b/CursoCss Intermediario e avançado/Barra de navegação horizontal/index.html
@@ -9,7 +9,7 @@
 <body id="home">
     <h2>Home</h2>
     <ul id="navegacao">
-        <li class="home">
+        <li class="home primeiro">
              <a href="index.html">Home</a> 
         </li>
        
